--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Piedra, Papel, Tijeras</title>
-    <script src="./javascript.js"></script>
+    <script src="./javascript.js" defer></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="botones">
+      <button id="piedra">Piedra</button>
+      <button id="papel">Papel</button>
+      <button id="tijera">Tijeras</button>
+    </div>
+
+    <div class="resultadosDiv"></div>
+  </body>
 </html>
